--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/build
+/out
+/.gradle/6.8
+/.gradle/buildOutputCleanup
+/.gradle/checksums
+/.gradle/configuration-cache
+/.gradle/vcs-1
+/gradle
+/target
+*.iml
+/.idea
+/history
+/drivers
+/.classpath
+/.project
+/.settings
+/bin/
